# speak-pilot

./: .gitignore  CLAUDE.md  LICENSE  LICENSE.Apache-2.0.txt  Package.swift  README.md  devenv.nix
.ai-agent/: structure.md
.ai-agent/steering/: market.md  plan.md  product.md  tech.md  work.md
.ai-agent/surveys/20260215-sfspeechrecognizer-macos/: README.md
.ai-agent/surveys/20260215-whisper-cpp-integration/: README.md
.ai-agent/surveys/20260215-whisper-speech-recognition/: README.md
.ai-agent/tasks/20260215-hotkey-text-insertion/: README.md
.ai-agent/tasks/20260215-phase1-basic-features/: README.md
.ai-agent/tasks/20260215-python-backend-service/: README.md
.ai-agent/tasks/20260215-speech-recognition-poc/: README.md
.ai-agent/tasks/20260215-stt-stdio-server/: README.md
.ai-agent/tasks/20260215-swift-backend-integration/: README.md
.github/workflows/: ci-build.yml  ci-test.yml
Sources/VoiceInput/: AppState.swift  ContentView.swift  Info.plist  VoiceInputApp.swift
Tests/VoiceInputTests/: AppStateTests.swift  BackendManagerTests.swift  BackendProtocolTests.swift  HotkeyManagerTests.swift  ProcessRunnerTests.swift  TextInserterTests.swift  VoiceInputTests.swift
poc/python/: README.md  pyproject.toml  realtime_faster_whisper.py  realtime_mlx_whisper.py
poc/python/tests/: generate_noise_fixtures.py  test_realtime_stream.py  test_transcription.py
poc/swift/: Package.resolved  Package.swift  README.md
stt-stdio-server/: pyproject.toml
stt-stdio-server/speak_pilot_stt_stdio/: __main__.py  audio.py  protocol.py  service.py  transcriber.py  vad.py
(+31 files in other folders)
