[project]
name = "voice-input-poc-python"
version = "0.1.0"
description = "Python リアルタイム音声書き起こし PoC"
requires-python = ">=3.12"
dependencies = [
    "mlx-whisper",
    "faster-whisper",
    "sounddevice",
    "numpy",
    "silero-vad>=6.2.0",
    "scipy>=1.17.0",
]

[project.scripts]
realtime-mlx-whisper = "realtime_mlx_whisper:main"
realtime-faster-whisper = "realtime_faster_whisper:main"
